[package]
name = "shpool_vt100"
version = "0.1.2"
authors = ["Jesse Luehrs <doy@tozt.net>", "Ethan Pailes <ethan@pailes.org>"]
edition = "2021"

description = "Library for parsing terminal data"
homepage = "https://github.com/ethanpailes/vt100-rust"
repository = "https://github.com/ethanpailes/vt100-rust"
readme = "README.md"
keywords = ["terminal", "vt100"]
categories = ["command-line-interface", "encoding"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1"
log = "0.4"
unicode-width = "0.1"
vte = "0.15"

[dev-dependencies]
nix = { version = "0.27", features = ["term"] }
quickcheck = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.2"
